--- a/index.html
+++ b/index.html
@@ -481,8 +481,8 @@
                             <p>Gain the work experience of building professional software products for India’s top tech companies like CRED, Playment, Jumbotail, Vicara, and others.</p>
                         </div>
                     </div>
-                    <div>
-                        <div>
+                    <div style="padding-top: 2%;">
+                        <div >
                             <img src="Image/Career/3.png" alt=""><br>
                             <h>Learn From Seasoned Industry Professionals in Real Time</h>
                             <p>Learn From Seasoned Industry Professionals in Real Time Participate in activity-based live working sessions facilitated by industry mentors from companies like Microsoft, Flipkart, Nilenso.</p>
@@ -502,7 +502,7 @@
                             <p>Go beyond just certificates with a Crio verified project portfolio on GitHub and impress any recruiter at a product based company with your skills and experience.</p>
                         </div>
                     </div>
-                    <div>
+                    <div style="padding-top: 1.85%;">
                         <div>
                             <img src="Image/Career/6.png" alt=""><br>
                             <h>Stand out at interviews with real proof of work</h>
@@ -873,7 +873,7 @@
                         <img src="Image/Career_Services/2.png" alt="">
                         <p><b>Soft-Skills training coupled with pre-training and post-training assessments</b></p>
                     </div>
-                    <div>
+                    <div style="padding-top: 1.5%;">
                         <img src="Image/Career_Services/3.png" alt="">
                         <p><b>Series of mock assessments and detailed interview prep sprints to ace top tech jobs</b></p>
                     </div>
@@ -882,7 +882,7 @@
                         <p><b>Expert guidance to get your profile ready (Github, LinkedIn, Resume)</b></p>
                     </div>
 
-                    <div class="last">
+                    <div class="last" style="padding-top: 1.75%;">
                         <img src="Image/Career_Services/5.png" alt="">
                         <p><b>Access to a diverse set of job opportunities with 1000+ hiring partners</b></p>
                     </div>
