--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 <a href="">Sign In &nbsp;<i class="fa-solid fa-chevron-right"></i></a>
             </div>
          </nav>
-        </div>
+    </div>
     <main>
         <content>
             <home>
@@ -119,7 +119,8 @@
             </home>
             <section class="grades">
                 <h1>Crio Grades <br> Have Craked Their Dream Careers In</h1>
-                    <marque scrollamount="5">
+                <div>
+                    <marque>
                       <section class="one">
                         <div>
                             <img src="Image/Grades/One/Surya Saini.png" alt="">
@@ -189,7 +190,7 @@
                         </div>
                       </section>
                     </marque>
-                    <marque behavior="" direction="">
+                    <marque>
                         <section class="two">
                         <div>
                             <img src="Image/Grades/Two/Amaan Arshad.png" alt="">
@@ -259,10 +260,11 @@
                         </div>
                       </section>
                     </marque>
-                    <section class="buttons">
-                        <button class="status_btn">Get Our Placement Status &nbsp;<i class="fa-solid fa-chevron-right"></i></button>
-                        <button class="book_btn">Book Your Trail, Now &nbsp;<i class="fa-solid fa-chevron-right"></i></button>
-                    </section>
+                </div>
+                <section class="buttons">
+                    <button class="status_btn">Get Our Placement Status &nbsp;<i class="fa-solid fa-chevron-right"></i></button>
+                    <button class="book_btn">Book Your Trail, Now &nbsp;<i class="fa-solid fa-chevron-right"></i></button>
+                </section>
             </section>
             <section class="project">
                     <h1>Modern Work <br> Experience-Based <br> Learning Approach</h1>
@@ -475,14 +477,14 @@
                         </div>
                     </div>
                     <div>
-                        <div>
+                        <div style="padding-bottom: 10%;">
                             <img src="Image/Career/2.png" alt=""><br>
                             <h>Gain Work-ex on Problems Given by Real Tech Companies</h>
                             <p>Gain the work experience of building professional software products for India’s top tech companies like CRED, Playment, Jumbotail, Vicara, and others.</p>
                         </div>
                     </div>
                     <div style="padding-top: 2%;">
-                        <div >
+                        <div style="padding-bottom: 1%;">
                             <img src="Image/Career/3.png" alt=""><br>
                             <h>Learn From Seasoned Industry Professionals in Real Time</h>
                             <p>Learn From Seasoned Industry Professionals in Real Time Participate in activity-based live working sessions facilitated by industry mentors from companies like Microsoft, Flipkart, Nilenso.</p>
@@ -503,7 +505,7 @@
                         </div>
                     </div>
                     <div style="padding-top: 1.85%;">
-                        <div>
+                        <div style="padding-bottom: 12%;">
                             <img src="Image/Career/6.png" alt=""><br>
                             <h>Stand out at interviews with real proof of work</h>
                             <p>Validate your learnings and let your skills shine with a work experience certificate that makes you stand out at interviews.</p>
@@ -524,15 +526,11 @@
                     <p>Learn with real work experience and get guaranteed placement as a Full-Stack or <br> Backend Developer at top product-based companies—now with cutting-edge GenAI <br> skills!</p>
                     <div class="details">
                         <div>
-                            <i class="fa-solid fa-circle-check" id="one"></i>
-                            <i class="fa-solid fa-circle-check" id="two"></i>
-                            <i class="fa-solid fa-circle-check" id="three"></i>
-                            <i class="fa-solid fa-circle-check" id="four"></i>
                             <span>OR</span>
-                            <p>Project-led MERN or Backend <br> Specialisation with Gen-AI <br> applications.</p>
-                            <p class="p">DSA and System Design curriculum <br> with additional AI Guidance</p>
-                            <p>Externship with Real companies and <br> AI-Driven Use Cases</p>
-                            <p>Assured placement in top dev roles</p>
+                            <p><i class="fa-solid fa-circle-check" id="one"></i>Project-led MERN or Backend <br> Specialisation with Gen-AI <br> applications.</p>
+                            <p class="p"><i class="fa-solid fa-circle-check" id="two"></i>DSA and System Design curriculum <br> with additional AI Guidance</p>
+                            <p><i class="fa-solid fa-circle-check" id="three"></i>Externship with Real companies and <br> AI-Driven Use Cases</p>
+                            <p><i class="fa-solid fa-circle-check" id="four"></i>Assured placement in top dev roles</p>
                         </div>
                     </div>
                     <div class="specialisation">
@@ -549,23 +547,23 @@
                     </div>
                   </div>
                   <div class="right_container">
-                    <i class="fa-solid fa-lock-open" id="unlock"></i>
                         <div class="description">
+                            <i class="fa-solid fa-lock-open" id="unlock"></i>
                             <span>Trail Session</span>
                             <p>Free</p>
                         </div>
-                        <i class="fa-regular fa-calendar-days" id="calendar"></i>
                         <div class="description">
+                            <i class="fa-regular fa-calendar-days" id="calendar"></i>
                             <span>Duration</span>
                             <p>9 months</p>
                         </div>
-                        <i class="fa-solid fa-graduation-cap" id="cap"></i>
                         <div class="description">
+                            <i class="fa-solid fa-graduation-cap" id="cap"></i>
                             <span>Scholarships</span>
                             <p>Assured Scholarships</p>
                         </div>
-                        <i class="fa-solid fa-briefcase" id="bag"></i>
                         <div class="description">
+                             <i class="fa-solid fa-briefcase" id="bag"></i>
                             <span>Career Services</span>
                             <p>Assured Referrals</p>
                         </div>
@@ -584,14 +582,10 @@
                     <p>Master QA Automation skills by working on projects like SDETs at top product-based <br> companies and get assured referrals</p>
                     <div class="details">
                         <div>
-                            <i class="fa-solid fa-circle-check" id="one"></i>
-                            <i class="fa-solid fa-circle-check" id="two"></i>
-                            <i class="fa-solid fa-circle-check" id="three"></i>
-                            <i class="fa-solid fa-circle-check" id="four"></i>
-                            <p>Complete Web Automation using using <br> tools like Selenium, Webdriver, <br> Xpath</p>
-                            <p class="p">Advance System Design, DS & Algo <br> Curriculum</p>
-                            <p>APIs & Performance Testing using <br> tools like Postman, Docker, Swagger</p>
-                            <p>DevOps & SDLC best practices - Using <br> tools like CI/CD, Jenkins, Log 4j</p>
+                            <p><i class="fa-solid fa-circle-check" id="one"></i>Complete Web Automation using using <br> tools like Selenium, Webdriver, <br> Xpath</p>
+                            <p class="p"><i class="fa-solid fa-circle-check" id="two"></i>Advance System Design, DS & Algo <br> Curriculum</p>
+                            <p><i class="fa-solid fa-circle-check" id="three"></i>APIs & Performance Testing using <br> tools like Postman, Docker, Swagger</p>
+                            <p><i class="fa-solid fa-circle-check" id="four"></i>DevOps & SDLC best practices - Using <br> tools like CI/CD, Jenkins, Log 4j</p>
                         </div>
                     </div>
                     <div class="specialisation">
@@ -607,23 +601,23 @@
                     </div>
                   </div>
                   <div class="right_container">
-                    <i class="fa-solid fa-lock-open" id="unlock"></i>
                         <div class="description">
+                            <i class="fa-solid fa-lock-open" id="unlock"></i>
                             <span>Trail Session</span>
                             <p>Free</p>
                         </div>
-                        <i class="fa-regular fa-calendar-days" id="calendar"></i>
                         <div class="description">
+                            <i class="fa-regular fa-calendar-days" id="calendar"></i>
                             <span>Duration</span>
                             <p>9 months</p>
                         </div>
-                        <i class="fa-solid fa-graduation-cap" id="cap"></i>
                         <div class="description">
+                            <i class="fa-solid fa-graduation-cap" id="cap"></i>
                             <span>Scholarships</span>
                             <p>Assured Scholarships</p>
                         </div>
-                        <i class="fa-solid fa-briefcase" id="bag"></i>
                         <div class="description">
+                            <i class="fa-solid fa-briefcase" id="bag"></i>
                             <span>Career Services</span>
                             <p>Assured Referrals</p>
                         </div>
@@ -641,15 +635,11 @@
                     <h1>Fellowship Program in NextGen Data Analytics with AI</h1>
                     <p>With evolving industries and increasing dependency on data driven insights, demand <br> for Data Analysts is increasing. Step into AI-powered analytics with expert career <br> guidance for your success</p>
                     <div class="details">
-                        <div>
-                            <i class="fa-solid fa-circle-check" id="one"></i>
-                            <i class="fa-solid fa-circle-check" id="two"></i>
-                            <i class="fa-solid fa-circle-check" id="three"></i>
-                            <i class="fa-solid fa-circle-check" id="four"></i>
-                            <p>Excel, SQL, Python and its libraries</p>
-                            <p class="p">PowerBI and Tableau Dashboards</p>
-                            <p>AI Tools for enhanced data analysis</p>
-                            <p>GenAI, ML, MLOps, Big Data and Data <br> Engineering</p>
+                        <div>   
+                            <p> <i class="fa-solid fa-circle-check" id="one"></i>Excel, SQL, Python and its libraries</p>
+                            <p class="p"><i class="fa-solid fa-circle-check" id="two"></i>PowerBI and Tableau Dashboards</p>
+                            <p> <i class="fa-solid fa-circle-check" id="three"></i>AI Tools for enhanced data analysis</p>
+                            <p> <i class="fa-solid fa-circle-check" id="four"></i>GenAI, ML, MLOps, Big Data and Data <br> Engineering</p>
                         </div>
                     </div>
                     <div class="specialisation">
@@ -665,23 +655,23 @@
                     </div>
                   </div>
                   <div class="right_container">
-                    <i class="fa-solid fa-lock-open" id="unlock"></i>
                         <div class="description">
+                            <i class="fa-solid fa-lock-open" id="unlock"></i>
                             <span>Trail Session</span>
                             <p>Free</p>
                         </div>
-                        <i class="fa-regular fa-calendar-days" id="calendar"></i>
                         <div class="description">
+                            <i class="fa-regular fa-calendar-days" id="calendar"></i>
                             <span>Duration</span>
                             <p>9 months</p>
                         </div>
-                        <i class="fa-solid fa-graduation-cap" id="cap"></i>
                         <div class="description">
+                            <i class="fa-solid fa-graduation-cap" id="cap"></i>
                             <span>Scholarships</span>
                             <p>Assured Scholarships</p>
                         </div>
-                        <i class="fa-solid fa-briefcase" id="bag"></i>
                         <div class="description">
+                            <i class="fa-solid fa-briefcase" id="bag"></i>
                             <span>Career Services</span>
                             <p>Assured Referrals</p>
                         </div>
@@ -808,8 +798,10 @@
             </section>
             <section class="vp_engineering">
                 <div class="left">
+                    <div class="para">
                     <div class="box"></div>
                     <p><span>"Their cutting edge platform and pedagogical methods are a class apart and help groom engineers not only on the technical skills but also the tools necessary for today's software development industry"</span></p>
+                    </div>
                     <div class="person">
                         <img src="Image/VP_Engineering/Piyush_Goel.png" alt="">
                         <h1>Piyush Goel</h1>
@@ -820,8 +812,10 @@
                     </div>
                 </div>
                 <div class="right">
+                    <div class="para">
                     <div class="box"></div>
                     <p><span>"Crio trains developers to have a hunger for self-learning along with good knowledge of tools and methodologies used in day-to-day development, which are THE MOST important qualities for fast-paced and value-driven companies like Jumbotail. Looking forward to hiring more engineers from Crio."</span></p>
+                    </div>
                     <div class="person">
                         <img class="img" src="Image/VP_Engineering/Ramesh_Kumar.png" alt="">
                         <h1>Ramesh Kumar Katreddi</h1>
@@ -1342,10 +1336,8 @@
             </section>
             <section class="chatbot">
                 <div class="chatbot_message">
-                    <div class="content">
+                        <p>Hi, I am Kiran. How <br> may I help you?</p>
                         <div class="box"></div>
-                        <p>Hi, I am Kiran. How may I help you?</p>
-                    </div>
                 </div>
                  <div class="chatbot_img">
                     <div>
