--- a/index.html
+++ b/index.html
@@ -942,7 +942,7 @@
                                  </div> 
                                  <div>
                                     <div class="top_container">
-                                      <div class="top">
+                                      <div class="top" style="padding-bottom: 21.1%;">
                                         <span><a href="https://www.youtube.com/watch?v=_O6pXnvhC4U" target="_blank"><i class="fa-solid fa-play"></i></a></span>
                                         <img src="Image/Community/top/Adriza_Mishra.png" alt="">
                                         <h1 style="padding-right: 36%;">Meet Adriza Mishra</h1>
@@ -961,7 +961,7 @@
                                  </div>  
                                  <div>
                                     <div class="top_container">
-                                      <div class="top">
+                                      <div class="top" style="padding-bottom: 14.5%;">
                                         <span><a href="https://www.youtube.com/watch?v=nYlnH1thoAw" target="_blank"><i class="fa-solid fa-play"></i></a></span>
                                         <img src="Image/Community/top/Vikash_Kumar.png" alt="">
                                         <h1 style="padding-right: 34%;">Meet Vikash Kumar</h1>
@@ -980,7 +980,7 @@
                                  </div>
                                  <div>
                                     <div class="top_container">
-                                      <div class="top">
+                                      <div class="top" style="padding-bottom: 15.5%;">
                                         <span><a href="https://www.youtube.com/watch?v=GqqVYSPYNtI" target="_blank"><i class="fa-solid fa-play"></i></a></span>
                                         <img src="Image/Community/top/Rahul_Raj.png" alt="">
                                         <h1 style="padding-right: 49%;">Meet Rahul Raj</h1>
@@ -999,7 +999,7 @@
                                  </div>
                                  <div>
                                     <div class="top_container">
-                                      <div class="top">
+                                      <div class="top" style="padding-bottom: 15.5%;">
                                         <span><a href="https://www.youtube.com/watch?v=wvhvIdList4" target="_blank"><i class="fa-solid fa-play"></i></a></span>
                                         <img src="Image/Community/top/Pranav Nigam.png" alt="">
                                         <h1 style="padding-right: 34%;">Meet Pranav Nigam</h1>
@@ -1018,7 +1018,7 @@
                                  </div>
                                  <div>
                                     <div class="top_container">
-                                      <div class="top">
+                                      <div class="top" style="padding-bottom: 15.5%;">
                                         <span><a href="https://www.youtube.com/watch?v=K9_t-9hAT54" target="_blank"><i class="fa-solid fa-play"></i></a></span>
                                         <img src="Image/Community/top/Prince_Jain.png" alt="">
                                         <h1 style="padding-right: 40%;">Meet Prince Jain</h1>
@@ -1037,7 +1037,7 @@
                                  </div>
                                  <div>
                                     <div class="top_container">
-                                      <div class="top">
+                                      <div class="top" style="padding-bottom: 22%;">
                                         <span><a href="https://www.youtube.com/watch?v=MvBdFnaxaDM" target="_blank"><i class="fa-solid fa-play"></i></a></span>
                                         <img src="Image/Community/top/Keerthana_Koorapati.png" alt="">
                                         <h1 style="padding-right: 12%;">Meet Keerthana Koorapati</h1>
@@ -1056,7 +1056,7 @@
                                  </div>
                                  <div>
                                     <div class="top_container">
-                                      <div class="top">
+                                      <div class="top" style="padding-bottom: 22%;">
                                         <span><a href="https://www.youtube.com/watch?v=Vn2QTEg6Weg" target="_blank"><i class="fa-solid fa-play"></i></a></span>
                                         <img src="Image/Community/top/Sayanika_Dutta.png" alt="">
                                         <h1 style="padding-right: 28%;">Meet Sayanika Dutta</h1>
@@ -1075,7 +1075,7 @@
                                  </div>
                                  <div>
                                     <div class="top_container">
-                                      <div class="top">
+                                      <div class="top" style="padding-bottom: 22%;">
                                         <span><a href="https://www.youtube.com/watch?v=tgWPDHLq-j4" target="_blank"><i class="fa-solid fa-play"></i></a></span>
                                         <img src="Image/Community/top/Surya_Saini.png" alt="">
                                         <h1 style="padding-right: 40%;">Meet Surya Saini</h1>
